@@ -234,7 +234,6 @@ dibs:
 digitzs:
   app_key: tcwtTux8SPZYO44Gf0UHZH74Z1HSutqCxmIV2PFj2jRc9Poroh3Z3R1BBQNRQ98Q
   api_key: 0HhRdOU2AsWVEu3gRIKi2UpMMmj8Fj48qggBYTo4
-  merchant_id: spreedly-susanswidg-32268973-2091076-148408385
 
 direc_pay:
   login: 200904281000001
